<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Zalupa.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zalupa_gondoni_label" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Zalupa.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zalupa_lobki_label" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Zalupa.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zalupa_pisyapopa_label" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Zalupa.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zalupa_anusi_label" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Zalupa.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zalupa_jopi_label" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Zalupa.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zalupa_penisi_label" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Zalupa.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zalupa_govno_label" />

    <View
        android:layout_width="56dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="?android:attr/textColorPrimary" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Zalupa.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zalupa_account_label" />

</merge>